refactor(test): consolidate WireMock setup into AbstractMonzoWireMockIT
Eliminates duplicated WireMock boilerplate (field declaration, @BeforeAll,
@AfterAll, @DynamicPropertySource) across the four Monzo IT classes by
introducing a shared AbstractMonzoWireMockIT base class that starts a
singleton WireMockServer in a static initialiser — the same pattern used
by AbstractPostgresIntegrationTest for Postgres.

Adds loadStubFromFile() helper so tests can reference a mapping JSON file
by classpath path rather than defining stub bodies inline. Adds default
stub files for GET /accounts and GET /transactions to match the existing
oauth/ping stubs. Renames TransactionSyncIT → MonzoTransactionSyncIT for
consistency with the other IT class names.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>